Removed top border line for accordions, fixed flex items spacing, added page title, and pre-filters correctly when clicking from Products menu.

--- a/client/src/components/screens/Products/Products.css
+++ b/client/src/components/screens/Products/Products.css
@@ -1,4 +1,3 @@
-.test {
-  background-color: "grey";
-  max-width: 300px;
+.MuiAccordion-root {
+  position: unset !important;
 }
